<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>unitree_d1_moveit_config</name>
  <version>0.1.0</version>
  <description>
     Moveit2 configuration package for Unitree D1.
  </description>
  <maintainer email="nilton.csv18@edu.udesc.br">nilton</maintainer>

  <license>BSD-3-Clause</license>

  <url type="website">http://moveit.ros.org/</url>
  <url type="bugtracker">https://github.com/moveit/moveit2/issues</url>
  <url type="repository">https://github.com/moveit/moveit2</url>

  <author email="nilton.csv18@edu.udesc.br">nilton</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>moveit_ros_move_group</exec_depend>
  <exec_depend>moveit_kinematics</exec_depend>
  <exec_depend>moveit_planners</exec_depend>
  <exec_depend>moveit_simple_controller_manager</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>unitree_d1_description</exec_depend>


  <export>
      <build_type>ament_cmake</build_type>
  </export>
</package>
